.kube-cron-jobs/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web
  labels:
    name: web
